fixed outcomes not showing bug

--- a/app/assets/stylesheets/player_interface.css.scss
+++ b/app/assets/stylesheets/player_interface.css.scss
@@ -265,3 +265,8 @@
     padding:0;
   }
 }
+
+.outcomes_list{
+  list-style-type: disc;
+  padding: 0% 0% 0% 5%;
+}
